feat: mudando no readme para dizer como usar o build.sh